--- a/public/index.html
+++ b/public/index.html
@@ -155,10 +155,10 @@
                         your pet’s
                         flights and providing travel crates. We will guide you through your specific country
                         requirements
-                        and we will provide you with detailed veterinary time schedules.
+                        and we will provide you with detailed veterinary time schedules.<br><br>
 
                         <a class="why_us" style="text-align: center;" href="#"
-                            x-on:click="openHome('INTERNATIONAL')">READ MORE</a>
+                            x-on:click="openHome('INTERNATIONAL')">READ MORE INT'NAL SERVICES</a>
                     </p>
 
 
@@ -167,11 +167,12 @@
                     <img src="images/homepage2/2.jpg" class="hompage2Image"><br><br>
                     <p class="why_us"> LOCAL PET TRANSPORT</p>
                     <p>
-                        Global Cargo Logistics, pet courier service in South Africa, will arrange for your pet’s
+                        Global Cargo Logistics, pet courier services in all of its branches across the world, will
+                        arrange for your pet’s
                         domestic flight and provide you with the airline approved pet travel crates.
-                        Our fleet of pet courier vehicles is fully insured, branded and air-conditioned.
+                        Our fleet of pet courier vehicles is fully insured, branded and air-conditioned.<br><br>
                         <a class="why_us" style="text-align: center;" href="#" x-on:click="openHome('LOCAL')">READ
-                            MORE</a>
+                            MORE LOCAL SERVICES</a>
                     </p>
                 </div>
                 <div class="col-md-4">
@@ -181,15 +182,15 @@
                         Global Cargo Logistics offers import services for pets travelling to every country in the world
                         and road transport
                         to neighbouring countries. We can arrange your animal travel - onward flights to other
-                        destinations as well as offer transit services.
+                        destinations as well as offer transit services.<br><br>
                         <a class="why_us" style="text-align: center;" href="#" x-on:click="openHome('IMPORT')">READ
-                            MORE</a>
+                            MORE IMPORT SERVICES</a>
                     </p>
 
                 </div>
                 <div class="col-md-12">
 
-                    <p class="why_us" style="text-align: center;"> WE TAKE CARE OF THE ENTIRE PET TRAVEL PROCESS AND
+                    <p style="text-align: center;"> WE TAKE CARE OF THE ENTIRE PET TRAVEL PROCESS AND
                         YOUR PET RELOCTION ARRANGEMENTS</p>
 
 
@@ -552,6 +553,232 @@
                 </div>
             </div>
         </section>
+
+        <!-- IMPORT  -->
+
+        <section>
+            <div class="row" x-show="IMPORT">
+                <div class="col-md-4">
+                    <h5>PET SERVICES</h5>
+                    <hr>
+                    <a class="link-secondary me-3" x-on:click="openHome('homepage')" href="#">HOME</a><br>
+                    <hr>
+                    <a class="link-secondary me-3" x-on:click="openHome('why_us')" href="#">WHY US</a><br>
+                    <hr>
+                    <a class="link-secondary me-3" x-on:click="openHome('shareholders')" href="#">BRANCH
+                        MANAGERS</a><br>
+                    <hr>
+
+
+
+                </div>
+                <div class="col-md-8">
+                    <p class="why_us">IMPORT PET DELIVERY</p>
+                    <p>
+                        We would like to make you aware that pet travel is vastly different to human travel. Importing
+                        pets into certain cuntries can be a very tricky process, therefore it is important that you
+                        follow
+                        the guidelines provided by your dedicated pet travel consultant very carefully. <br>
+
+                        We primarily assist with importation of dogs, cats & birds but we can assist you with the
+                        importation of other family favourite animals too. Should you have a different type of pet,
+                        please contact us in order for us to find out if they are allowed to be imported into South
+                        Africa.<br>
+
+
+                    <p class="why_us">We would strongly recommend that the very first thing you do is acquaint and
+                        establish yourself with these few very important points:</p>
+
+                    <p><img src="images/icon.JPG">
+                        Obtain, receive and accept our quote</p>
+
+                    <p><img src="images/icon.JPG">Understand your pet’s travel requirements with your dedicated
+                        consultant’s guidance</p>
+
+                    <p><img src="images/icon.JPG">Adhere to your pet’s veterinary schedules and timelines provided by
+                        your consultant</p>
+
+
+
+                    <p class="why_us">Understanding your import pet travel quotation.</p>
+
+                    <p>Our standard Import Quote usually includes only the entry into the destination country's import
+                        services and
+                        excludes the airfreight and export services from your country of origin. However, should you
+                        require a full door to door service we can happily oblige and provide you with an all inclusive
+                        quote.</p>
+
+
+
+                    <p class="why_us">Quote for Full Export & Import services – Door to Door. …What does this mean?</p>
+
+                    <p><img src="images/icon.JPG">Your dedicated consultant will advise you on the requirements and
+                        documentation needed to enter your country of origin</p>
+
+                    <p><img src="images/icon.JPG">We will apply for and collect your import permit.</p>
+
+                    <p><img src="images/icon.JPG">We will appoint a travel agent at your origin and arrange all the
+                        veterinary preparations and Export services e.g. schedule for veterinary tests and treatments,
+                        endorsement of the health certificate and book flights from your origin to destination country.
+                    </p>
+
+                    <p><img src="images/icon.JPG">Upon arrival in destination country, we will meet the incoming flight
+                        and
+                        liaise with the state vet and customs officers to clear your pets into your country. We will
+                        collect your pet from the airline and deliver to your new residence.</p>
+
+                    <p><img src="images/icon.JPG">
+                        If quarantine is required, we will arrange their stay at the quarantine facility and once
+                        completed we will collect (usually a Friday) and deliver your pets to your new residence.</p>
+
+
+                    <p class="why_us">Accepting our quote for your pet’s travel services.</p>
+
+                    <p>Please let us know that you are accepting our quote so our Admin. department can supply you with
+                        your invoice.
+
+                        You can either pay the required non-refundable deposit or the full amount.
+
+                        Once your payment reflects in our account, your file will be allocated to your dedicated
+                        consultant.
+                    </p>
+
+                    <p class="why_us">Working with your dedicated consultant.</p>
+                    <p>Your dedicated consultant will contact you to establish a relationship with you and your pets and
+                        at the same time collect all the travel information specific to your pet’s relocation
+                        needs.<br><br>
+
+                        You will be asked to send us copies of your pets’ veterinary documentation so your consultant
+                        can establish your travel preparedness and advise accordingly.<br><br>
+
+                        You will be asked to complete our Required Information Sheet, the Import Permit Authorisation
+                        and Quarantine Indemnity documents with your contact details, collection / delivery addresses.
+                        It is important that you do this immediately, because if there is anything wrong with your
+                        paperwork, your consultant will be able to pick it up timeously and guide you
+                        accordingly.<br><br>
+
+                        Kindly note it can take 2 – 3 working weeks to obtain an import permit from the permits office,
+                        therefore it is important to send the signed Import Permit Authorisation form and Quarantine
+                        Indemnity form onto your dedicated consultant as soon as possible to avoid any delays.</p>
+
+
+
+                    <p class="why_us">Adhering to the destination country's import requirements.</p>
+
+                    <p>All Parrots, dogs and cats imported into a country must be registered, as manifest cargo and
+                        cannot fly
+                        as excess baggage. The Directorate Veterinary Services does not have veterinary officials that
+                        can check paperwork at the passenger terminal of departing airport
+                        . Dogs, Parrots and cats can only disembark via the cargo terminal of the
+                        respective airports.<br><br>
+
+                        Cats do not require any blood testing or quarantine in order to enter South Africa.<br><br>
+
+                        All dogs arriving into South Africa require blood testing.<br><br>
+
+                        Dogs from certain countries require to be quarantined on arrival in the country.</p>
+
+                    <p class="why_us">Required documentation for Cats</p>
+
+                    <p><img src="images/icon.JPG">Import permit – we will obtain it on your behalf. Please note it might
+                        take 2-3 working weeks to receive the permit. An Import Permit is valid for 6 months.</p>
+                    <p><img src="images/icon.JPG">Microchip – The microchip must be able to be read by an ISO 11784 or
+                        ISO 11785 scanner.
+                    </p>
+                    <p><img src="images/icon.JPG">
+                        Valid rabies vaccination – must be older than 30 days and younger than 1 year.
+                    </p>
+                    <p><img src="images/icon.JPG">Health certificate endorsed by Government Veterinarian within 10 days
+                        of export.
+                    </p>
+                    <p><img src="images/icon.JPG">Cats do not require any blood testing or quarantine in order to enter
+                        into any country
+                    </p>
+
+
+                    <p class="why_us">Required documentation for Dogs:</p>
+
+                    <p><img src="images/icon.JPG">Import permit – we will obtain it on your behalf. Please note it might
+                        take 2-3 working weeks to receive the permit. Non-quarantine permit is valid for 6 months.</p>
+                    <p><img src="images/icon.JPG">Microchip – The microchip must be able to be read by an ISO 11784 or
+                        ISO 11785 scanners.
+                    </p>
+                    <p><img src="images/icon.JPG">
+
+                        Valid rabies vaccination – must be older than 30 days and younger than 1 year
+                    </p>
+                    <p><img src="images/icon.JPG">5 Blood tests are required. These blood tests need to be done within
+                        30 days of shipment. Please refer to the paragraph below.
+                    </p>
+                    <p><img src="images/icon.JPG">Dogs imported from countries not certified free from Dirofilaria
+                        immitis must be treated from the date of negative testing until export at the required intervals
+                        as stipulated in the receiving country's health certificate. Sufficient Dirofilaria immitis
+                        medication
+                        needs to accompany the dog to the receiving country so that the dogs can receive a six month
+                        course of
+                        medication after importation into the receiving country.
+                    </p>
+
+                    <p><img src="images/icon.JPG">This might not be necessary for import, but will be specified on the
+                        health certificate which is issued with the import permit.
+                    </p>
+
+                    <p><img src="images/icon.JPG">The receiving country's Health certificate (including blood test
+                        results)
+                        must be endorsed by a Government Veterinarian within 10 days of export.
+
+                    <p><img src="images/icon.JPG">Quarantine is required for dogs only and only from specific countries.
+                        Please check with your consultant if quarantine will be applicable to your dogs upon arrival in
+                        the receiving country.
+                    </p>
+
+
+                    <p class="why_us">Required documentation for Parrots</p>
+
+                    <p><img src="images/icon.JPG">Import permit – we will obtain it on your behalf. Please note it might
+                        take 2-3 working weeks to receive the permit. An Import Permit is valid for 6 months.</p>
+                    <p><img src="images/icon.JPG">Microchip – The microchip must be able to be read by an ISO 11784 or
+                        ISO 11785 scanner.
+                    </p>
+                    <p><img src="images/icon.JPG">
+                        DNA Certificate – must be older than 30 days and younger than 1 year.
+                    </p>
+
+
+                    <p><img src="images/icon.JPG">Health certificate endorsed by Government Veterinarian within 10 days
+                        of export.
+                    </p>
+
+                    <p><img src="images/icon.JPG">Quarantine is required for Parrots only and only from specific
+                        countries.
+                        Please check with your consultant if quarantine will be applicable to your dogs upon arrival in
+                        the receiving country.
+                    </p>
+
+                    <p><img src="images/icon.JPG">CITES for specific birds will be needed. We will obtain it on your
+                        behalf.
+                        It might take 3 to 4 days to receive the CITES documents. Please ensure your sender has applied
+                        for
+                        it before coming to us so we can fascilitate the process.
+                    </p>
+
+                    <p><img src="images/icon.JPG">Transfer of owenership: Sender ought to have legally transferred the
+                        ownership
+                        of the parrots to the consignee.
+                    </p>
+
+
+                    <p><img src="images/icon.JPG">Parrots do not require any blood testing or quarantine in order to
+                        enter
+                        into any country
+                    </p>
+
+
+
+                </div>
+            </div>
+        </section>
+
 
         <!-- about us  -->
         <section>
@@ -1489,7 +1716,20 @@
             </div>
 
         </section>
+
+        <section>
+            <div class="row">
+                <div class="col-md-12">
+                    <img src="images/ipata.JPG" class="homeImage"/>
+    
+                </div>
+    
+            </div>
+        </section>
     </main>
+
+
+   
     <script src="https://smtpjs.com/v3/smtp.js"> </script>
     <script>
         function sendEmail() {
