--- a/public/index.html
+++ b/public/index.html
@@ -182,7 +182,7 @@
                         Global Cargo Logistics offers import services for pets travelling to every country in the world
                         and road transport
                         to neighbouring countries. We can arrange your animal travel - onward flights to other
-                        destinations as well as offer transit services.<br><br>
+                        destinations as well as offer transit services making sure your pets arrives safe<br><br>
                         <a class="btn" style="text-align: center; color: blue;" href="#" x-on:click="openHome('IMPORT')">READ
                             MORE ON IMPORT SERVICES</a>
                     </p>
