--- a/public/index.html
+++ b/public/index.html
@@ -901,7 +901,7 @@
                         <hr><br>
                         <p class="why_us">The Global Cargo Couriers difference
                         </p>
-                        <img src="images/why_us/whyfwthtop_cfvan.jpg" />
+                        <img src="images/why_us/whyfwthtop_cfvan.jpg"  class="hompage2Image"/>
                         <hr><br>
                         <p class="why_us">Courier Franchisees
                         </p>
